--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChessT</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ChessT</title>
+  <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
 <body>
 
   <div id="main">
-    
+
     <nav id="header">
       <div id="icon">
         ChessT
@@ -23,12 +23,12 @@
         <li>time</li>
       </ul>
     </nav>
-  
+
     <section id="game">
       <div id="title">
         Game: <br>
         Kasparov, G. (2812) vs. <br>
-        Topalov, V. (2700) 
+        Topalov, V. (2700)
       </div>
       <div class="move-gradient" id="gradient-left"></div>
       <div class="move-gradient" id="gradient-right"></div>
@@ -78,7 +78,7 @@
         <div>10.</div>
         <div><span>a3</span></div>
         <div><span>e5</span></div>
-        <div >11.</div>
+        <div>11.</div>
         <div>
           <img class="comment-small" src="./img/comment_small_left.png" alt="comment">
           <span>O-O-O</span>
@@ -89,310 +89,310 @@
         <div><span>a6</span></div>
       </div>
     </section>
-  
+
     <section id="board">
       <div class="field light">
-          <div id="A8">
-              <p class="over">A</p>
-              <p class="left">8</p>
-              <img src="./img/rook_b.svg" alt="Rook black" />
-          </div>
+        <div id="A8">
+          <p class="over">A</p>
+          <p class="left">8</p>
+          <img src="./img/rook_b.svg" alt="Rook black" />
+        </div>
       </div>
-      <div class="field">
-          <div id="B8">
-              <p class="over">B</p>
-              <img src="./img/knight_b.svg" alt="Knight black" />
-          </div>
-      </div>
-      <div class="field light">
-          <div id="C8">
-              <p class="over">C</p>
-              <img src="./img/bishop_b.svg" alt="Bishop black" />
-          </div>
-      </div>
-      <div class="field">
-          <div id="D8">
-              <p class="over">D</p>
-              <img src="./img/king_b.svg" alt="King black" />
-          </div>
+      <div class="field dark">
+        <div id="B8">
+          <p class="over">B</p>
+          <img src="./img/knight_b.svg" alt="Knight black" />
+        </div>
       </div>
       <div class="field light">
-          <div id="E8">
-              <p class="over">E</p>
-              <img src="./img/queen_b.svg" alt="Queen black" />
-          </div>
+        <div id="C8">
+          <p class="over">C</p>
+          <img src="./img/bishop_b.svg" alt="Bishop black" />
+        </div>
       </div>
-      <div class="field">
-          <div id="F8">
-              <p class="over">F</p>
-              <img src="./img/bishop_b.svg" alt="Bishop black" />
-          </div>
+      <div class="field dark">
+        <div id="D8">
+          <p class="over">D</p>
+          <img src="./img/king_b.svg" alt="King black" />
+        </div>
       </div>
       <div class="field light">
-          <div id="G8">
-              <p class="over">G</p>
-              <img src="./img/knight_b.svg" alt="Knight black" />
-          </div>
+        <div id="E8">
+          <p class="over">E</p>
+          <img src="./img/queen_b.svg" alt="Queen black" />
+        </div>
       </div>
-      <div class="field">
-          <div id="H8">
-              <p class="over">H</p>
-              <p class="right">8</p>
-              <img src="img/rook_b.svg" alt="Rook black" />
-          </div>
+      <div class="field dark">
+        <div id="F8">
+          <p class="over">F</p>
+          <img src="./img/bishop_b.svg" alt="Bishop black" />
+        </div>
+      </div>
+      <div class="field light">
+        <div id="G8">
+          <p class="over">G</p>
+          <img src="./img/knight_b.svg" alt="Knight black" />
+        </div>
+      </div>
+      <div class="field dark">
+        <div id="H8">
+          <p class="over">H</p>
+          <p class="right">8</p>
+          <img src="img/rook_b.svg" alt="Rook black" />
+        </div>
       </div>
 
-      <div class="field">
-          <div id="A7">
-              <p class="left">7</p>
-              <img src="./img/pawn_b.svg" alt="Pawn black" />
-          </div>
+      <div class="field dark">
+        <div id="A7">
+          <p class="left">7</p>
+          <img src="./img/pawn_b.svg" alt="Pawn black" />
+        </div>
       </div>
       <div class="field light">
-          <div id="B7">
-              <img src="./img/pawn_b.svg" alt="Pawn black" />
-          </div>
+        <div id="B7">
+          <img src="./img/pawn_b.svg" alt="Pawn black" />
+        </div>
       </div>
-      <div class="field">
-          <div id="C7">
-              <img src="./img/pawn_b.svg" alt="Pawn black" />
-          </div>
-      </div>
-      <div class="field light">
-          <div id="D7">
-              <img src="./img/pawn_b.svg" alt="Pawn black" />
-          </div>
-      </div>
-      <div class="field">
-          <div id="E7">
-              <img src="./img/pawn_b.svg" alt="Pawn black" />
-          </div>
+      <div class="field dark">
+        <div id="C7">
+          <img src="./img/pawn_b.svg" alt="Pawn black" />
+        </div>
       </div>
       <div class="field light">
-          <div id="F7">
-              <img src="./img/pawn_b.svg" alt="Pawn black" />
-          </div>
+        <div id="D7">
+          <img src="./img/pawn_b.svg" alt="Pawn black" />
+        </div>
       </div>
-      <div class="field">
-          <div id="G7">
-              <img src="./img/pawn_b.svg" alt="Pawn black" />
-          </div>
-      </div>
-      <div class="field light">
-          <div id="H7">
-              <p class="right">7</p>
-              <img src="./img/pawn_b.svg" alt="Pawn black" />
-          </div>
-      </div>
-
-      <div class="field light">
-          <div id="A6">
-              <p class="left">6</p>
-          </div>
-      </div>
-      <div class="field">
-          <div id="B6"></div>
+      <div class="field dark">
+        <div id="E7">
+          <img src="./img/pawn_b.svg" alt="Pawn black" />
+        </div>
       </div>
       <div class="field light">
-          <div id="C6"></div>
+        <div id="F7">
+          <img src="./img/pawn_b.svg" alt="Pawn black" />
+        </div>
       </div>
-      <div class="field">
-          <div id="D6"></div>
-      </div>
-      <div class="field light">
-          <div id="E6"></div>
-      </div>
-      <div class="field">
-          <div id="F6"></div>
+      <div class="field dark">
+        <div id="G7">
+          <img src="./img/pawn_b.svg" alt="Pawn black" />
+        </div>
       </div>
       <div class="field light">
-          <div id="G6"></div>
-      </div>
-      <div class="field">
-          <div id="H6">
-              <p class="right">6</p>
-          </div>
-      </div>
-
-      <div class="field">
-          <div id="A5">
-              <p class="left">5</p>
-          </div>
-      </div>
-      <div class="field light">
-          <div id="B5"></div>
-      </div>
-      <div class="field">
-          <div id="C5"></div>
-      </div>
-      <div class="field light">
-          <div id="D5"></div>
-      </div>
-      <div class="field">
-          <div id="E5"></div>
-      </div>
-      <div class="field light">
-          <div id="F5"></div>
-      </div>
-      <div class="field">
-          <div id="G5"></div>
-      </div>
-      <div class="field light">
-          <div id="H5">
-              <p class="right">5</p>
-          </div>
+        <div id="H7">
+          <p class="right">7</p>
+          <img src="./img/pawn_b.svg" alt="Pawn black" />
+        </div>
       </div>
 
       <div class="field light">
-          <div id="A4">
-              <p class="left">4</p>
-          </div>
+        <div id="A6">
+          <p class="left">6</p>
+        </div>
       </div>
-      <div class="field">
-          <div id="B4"></div>
-      </div>
-      <div class="field light">
-          <div id="C4"></div>
-      </div>
-      <div class="field">
-          <div id="D4"></div>
+      <div class="field dark">
+        <div id="B6"></div>
       </div>
       <div class="field light">
-          <div id="E4"></div>
+        <div id="C6"></div>
       </div>
-      <div class="field">
-          <div id="F4"></div>
+      <div class="field dark">
+        <div id="D6"></div>
       </div>
       <div class="field light">
-          <div id="G4"></div>
+        <div id="E6"></div>
       </div>
-      <div class="field">
-          <div id="H4">
-              <p class="right">4</p>
-          </div>
+      <div class="field dark">
+        <div id="F6"></div>
+      </div>
+      <div class="field light">
+        <div id="G6"></div>
+      </div>
+      <div class="field dark">
+        <div id="H6">
+          <p class="right">6</p>
+        </div>
       </div>
 
-      <div class="field">
-          <div id="A3">
-              <p class="left">3</p>
-          </div>
+      <div class="field dark">
+        <div id="A5">
+          <p class="left">5</p>
+        </div>
       </div>
       <div class="field light">
-          <div id="B3"></div>
+        <div id="B5"></div>
       </div>
-      <div class="field">
-          <div id="C3"></div>
-      </div>
-      <div class="field light">
-          <div id="D3"></div>
-      </div>
-      <div class="field">
-          <div id="E3"></div>
+      <div class="field dark">
+        <div id="C5"></div>
       </div>
       <div class="field light">
-          <div id="F3"></div>
+        <div id="D5"></div>
       </div>
-      <div class="field">
-          <div id="G3"></div>
+      <div class="field dark">
+        <div id="E5"></div>
       </div>
       <div class="field light">
-          <div id="H3">
-              <p class="right">3</p>
-          </div>
+        <div id="F5"></div>
+      </div>
+      <div class="field dark">
+        <div id="G5"></div>
+      </div>
+      <div class="field light">
+        <div id="H5">
+          <p class="right">5</p>
+        </div>
       </div>
 
       <div class="field light">
-          <div id="A2">
-              <p class="left">2</p>
-              <img src="./img/pawn_w.svg" alt="Pawn white" />
-          </div>
+        <div id="A4">
+          <p class="left">4</p>
+        </div>
       </div>
-      <div class="field">
-          <div id="B2">
-              <img src="./img/pawn_w.svg" alt="Pawn white" />
-          </div>
+      <div class="field dark">
+        <div id="B4"></div>
       </div>
       <div class="field light">
-          <div id="C2">
-              <img src="./img/pawn_w.svg" alt="Pawn white" />
-          </div>
+        <div id="C4"></div>
       </div>
-      <div class="field">
-          <div id="D2">
-              <img src="./img/pawn_w.svg" alt="Pawn white" />
-          </div>
+      <div class="field dark">
+        <div id="D4"></div>
       </div>
       <div class="field light">
-          <div id="E2">
-              <img src="./img/pawn_w.svg" alt="Pawn white" />
-          </div>
+        <div id="E4"></div>
       </div>
-      <div class="field">
-          <div id="F2">
-              <img src="./img/pawn_w.svg" alt="Pawn white" />
-          </div>
+      <div class="field dark">
+        <div id="F4"></div>
       </div>
       <div class="field light">
-          <div id="G2">
-              <img src="./img/pawn_w.svg" alt="Pawn white" />
-          </div>
+        <div id="G4"></div>
       </div>
-      <div class="field">
-          <div id="H2">
-              <p class="right">2</p>
-              <img src="./img/pawn_w.svg" alt="Pawn white" />
-          </div>
+      <div class="field dark">
+        <div id="H4">
+          <p class="right">4</p>
+        </div>
       </div>
 
-      <div class="field">
-          <div id="A1">
-              <p class="under">A</p>
-              <p class="left">1</p>
-              <img src="./img/rook_w.svg" alt="Rook white" />
-          </div>
+      <div class="field dark">
+        <div id="A3">
+          <p class="left">3</p>
+        </div>
       </div>
       <div class="field light">
-          <div id="B1">
-              <p class="under">B</p>
-              <img src="./img/knight_w.svg" alt="Knight white" />
-          </div>
+        <div id="B3"></div>
       </div>
-      <div class="field">
-          <div id="C1">
-              <p class="under">C</p>
-              <img src="./img/bishop_w.svg" alt="Bishop white" />
-          </div>
+      <div class="field dark">
+        <div id="C3"></div>
       </div>
       <div class="field light">
-          <div id="D1">
-              <p class="under">D</p>
-              <img src="./img/king_w.svg" alt="King white" />
-          </div>
+        <div id="D3"></div>
       </div>
-      <div class="field">
-          <div id="E1">
-              <p class="under">E</p>
-              <img src="./img/queen_w.svg" alt="Queen white" />
-          </div>
+      <div class="field dark">
+        <div id="E3"></div>
       </div>
       <div class="field light">
-          <div id="F1">
-              <p class="under">F</p>
-              <img src="./img/bishop_w.svg" alt="Bishop white" />
-          </div>
+        <div id="F3"></div>
       </div>
-      <div class="field">
-          <div id="G1">
-              <p class="under">G</p>
-              <img src="./img/knight_w.svg" alt="Knight white" />
-          </div>
+      <div class="field dark">
+        <div id="G3"></div>
       </div>
       <div class="field light">
-          <div id="H1">
-              <p class="under">H</p>
-              <p class="right">1</p>
-              <img src="./img/rook_w.svg" alt="Rook white" />
-          </div>
+        <div id="H3">
+          <p class="right">3</p>
+        </div>
+      </div>
+
+      <div class="field light">
+        <div id="A2">
+          <p class="left">2</p>
+          <img src="./img/pawn_w.svg" alt="Pawn white" />
+        </div>
+      </div>
+      <div class="field dark">
+        <div id="B2">
+          <img src="./img/pawn_w.svg" alt="Pawn white" />
+        </div>
+      </div>
+      <div class="field light">
+        <div id="C2">
+          <img src="./img/pawn_w.svg" alt="Pawn white" />
+        </div>
+      </div>
+      <div class="field dark">
+        <div id="D2">
+          <img src="./img/pawn_w.svg" alt="Pawn white" />
+        </div>
+      </div>
+      <div class="field light">
+        <div id="E2">
+          <img src="./img/pawn_w.svg" alt="Pawn white" />
+        </div>
+      </div>
+      <div class="field dark">
+        <div id="F2">
+          <img src="./img/pawn_w.svg" alt="Pawn white" />
+        </div>
+      </div>
+      <div class="field light">
+        <div id="G2">
+          <img src="./img/pawn_w.svg" alt="Pawn white" />
+        </div>
+      </div>
+      <div class="field dark">
+        <div id="H2">
+          <p class="right">2</p>
+          <img src="./img/pawn_w.svg" alt="Pawn white" />
+        </div>
+      </div>
+
+      <div class="field dark">
+        <div id="A1">
+          <p class="under">A</p>
+          <p class="left">1</p>
+          <img src="./img/rook_w.svg" alt="Rook white" />
+        </div>
+      </div>
+      <div class="field light">
+        <div id="B1">
+          <p class="under">B</p>
+          <img src="./img/knight_w.svg" alt="Knight white" />
+        </div>
+      </div>
+      <div class="field dark">
+        <div id="C1">
+          <p class="under">C</p>
+          <img src="./img/bishop_w.svg" alt="Bishop white" />
+        </div>
+      </div>
+      <div class="field light">
+        <div id="D1">
+          <p class="under">D</p>
+          <img src="./img/king_w.svg" alt="King white" />
+        </div>
+      </div>
+      <div class="field dark">
+        <div id="E1">
+          <p class="under">E</p>
+          <img src="./img/queen_w.svg" alt="Queen white" />
+        </div>
+      </div>
+      <div class="field light">
+        <div id="F1">
+          <p class="under">F</p>
+          <img src="./img/bishop_w.svg" alt="Bishop white" />
+        </div>
+      </div>
+      <div class="field dark">
+        <div id="G1">
+          <p class="under">G</p>
+          <img src="./img/knight_w.svg" alt="Knight white" />
+        </div>
+      </div>
+      <div class="field light">
+        <div id="H1">
+          <p class="under">H</p>
+          <p class="right">1</p>
+          <img src="./img/rook_w.svg" alt="Rook white" />
+        </div>
       </div>
     </section>
 
@@ -407,19 +407,21 @@
             Kasparov:
           </div>
           <div class="comment">
-            As far as I know, Black usually plays c6 and b5 before the move Bg7, but I don't think that this shift changes something seriously.  
-          </div>
-        <div class="comment">
-          
-          <div class="writer">
-            <img class="avatar" src="./img/avatar.svg" alt="Avatar">
-            Kasparov:
+            As far as I know, Black usually plays c6 and b5 before the move Bg7, but I don't think that this shift
+            changes something seriously.
           </div>
           <div class="comment">
-            As far as I know, Black usually plays c6 and b5 before the move Bg7, but I don't think that this shift changes something seriously.  
+
+            <div class="writer">
+              <img class="avatar" src="./img/avatar.svg" alt="Avatar">
+              Kasparov:
+            </div>
+            <div class="comment">
+              As far as I know, Black usually plays c6 and b5 before the move Bg7, but I don't think that this shift
+              changes something seriously.
+            </div>
           </div>
         </div>
-      </div>
     </section>
   </div>
 
