introduced: move-(number,black,white) for clarity

--- a/index.html
+++ b/index.html
@@ -33,60 +33,60 @@
       <div class="move-gradient" id="gradient-left"></div>
       <div class="move-gradient" id="gradient-right"></div>
       <div id="moves">
-        <div>1.</div>
-        <div><span>e4</span></div>
-        <div><span>d6</span></div>
-        <div>2.</div>
-        <div><span>d4</span></div>
-        <div><span>Nf6</span></div>
-        <div>3.</div>
-        <div><span>Nc3</span></div>
-        <div><span>g6</span></div>
-        <div class="sel-row">4.</div>
-        <div class="sel-row">
+        <div class="move-number">1.</div>
+        <div class="move-white"><span>e4</span></div>
+        <div class="move-black"><span>d6</span></div>
+        <div class="move-number">2.</div>
+        <div class="move-white"><span>d4</span></div>
+        <div class="move-black"><span>Nf6</span></div>
+        <div class="move-number">3.</div>
+        <div class="move-white"><span>Nc3</span></div>
+        <div class="move-black"><span>g6</span></div>
+        <div class="move-number sel-row">4.</div>
+        <div class="move-white sel-row">
           <img id="sel-move" src="./img/sel-move.svg" alt="selected move">
           <img class="comment-small" src="./img/comment_small_left.png" alt="comment">
           <span>Be3</span>
         </div>
-        <div class="sel-row">
+        <div class="move-black sel-row">
           <span>Bg7</span>
         </div>
-        <div>5.</div>
-        <div>
-          <img class="comment-small" src="./img/comment_small_left.png" alt="comment">
-          <span>Qd2</span>
+        <div class="move-number">5.</div>
+        <div class="move-white">
+            <img class="comment-small" src="./img/comment_small_left.png" alt="comment"/>
+            <span>Qd2</span>
         </div>
-        <div>
-          <span>c6</span>
-          <img class="comment-small" src="./img/comment_small_right.png" alt="comment">
+        <div class="move-black">
+            <span>c6</span>
+            <img class="comment-small" src="./img/comment_small_right.png" alt="comment"/>
         </div>
-        <div>6.</div>
-        <div><span>f3</span></div>
-        <div><span>b5</span></div>
-        <div>7.</div>
-        <div><span>Nge2</span></div>
-        <div><span>Nbd7</span></div>
-        <div>8.</div>
-        <div><span>Bh6</span></div>
-        <div>
-          <span>Bxh6</span>
-          <img class="comment-small" src="./img/comment_small_right.png" alt="comment">
+        <div class="move-number">6.</div>
+        <div class="move-white"><span>f3</span></div>
+        <div class="move-black"><span>b5</span></div>
+        <div class="move-number">7.</div>
+        <div class="move-white"><span>Nge2</span></div>
+        <div class="move-black"><span>Nbd7</span></div>
+        <div class="move-number">8.</div>
+        <div class="move-white"><span>Bh6</span></div>
+        <div class="move-black">
+            <span>Bxh6</span>
+            <img class="comment-small" src="./img/comment_small_right.png" alt="comment"/>
         </div>
-        <div>9.</div>
-        <div><span>Qxh6</span></div>
-        <div><span>Bb7</span></div>
-        <div>10.</div>
-        <div><span>a3</span></div>
-        <div><span>e5</span></div>
-        <div>11.</div>
-        <div>
-          <img class="comment-small" src="./img/comment_small_left.png" alt="comment">
+        <div class="move-number">9.</div>
+        <div class="move-white"><span>Qxh6</span></div>
+        <div class="move-black"><span>Bb7</span></div>
+        <div class="move-number">10.</div>
+        <div class="move-white"><span>a3</span></div>
+        <div class="move-black"><span>e5</span></div>
+        <div class="move-number">11.</div>
+        <div class="move-white">
+          <img class="comment-small" src="./img/comment_small_left.png" alt="comment"/>
           <span>O-O-O</span>
         </div>
-        <div><span>Qe7</span></div>
-        <div>12.</div>
-        <div><span>Kb1</span></div>
-        <div><span>a6</span></div>
+        <div class="move-black"><span>Qe7</span></div>
+        <div class="move-number">12.</div>
+        <div class="move-white"><span>Kb1</span></div>
+        <div class="move-black"><span>a6</span></div>
       </div>
     </section>
 
