--- a/index.html
+++ b/index.html
@@ -91,308 +91,204 @@
     </section>
 
     <section id="board">
-      <div class="field dark">
-        <div id="A8">
-          <p class="over">A</p>
-          <p class="left">8</p>
-          <img src="./img/rook_b.svg" alt="Rook black" />
-        </div>
+      <div id="A8" class="field dark">
+        <p class="over">A</p>
+        <p class="left">8</p>
+        <img src="./img/rook_b.svg" alt="Rook black" />
       </div>
-      <div class="field light">
-        <div id="B8">
-          <p class="over">B</p>
-          <img src="./img/knight_b.svg" alt="Knight black" />
-        </div>
+      <div id="B8" class="field light">
+        <p class="over">B</p>
+        <img src="./img/knight_b.svg" alt="Knight black" />
       </div>
-      <div class="field dark">
-        <div id="C8">
-          <p class="over">C</p>
-          <img src="./img/bishop_b.svg" alt="Bishop black" />
-        </div>
+      <div id="C8" class="field dark">
+        <p class="over">C</p>
+        <img src="./img/bishop_b.svg" alt="Bishop black" />
       </div>
-      <div class="field light">
-        <div id="D8">
-          <p class="over">D</p>
-          <img src="./img/king_b.svg" alt="King black" />
-        </div>
+      <div id="D8" class="field light">
+        <p class="over">D</p>
+        <img src="./img/king_b.svg" alt="King black" />
       </div>
-      <div class="field dark">
-        <div id="E8">
-          <p class="over">E</p>
-          <img src="./img/queen_b.svg" alt="Queen black" />
-        </div>
+      <div id="E8" class="field dark">
+        <p class="over">E</p>
+        <img src="./img/queen_b.svg" alt="Queen black" />
       </div>
-      <div class="field light">
-        <div id="F8">
-          <p class="over">F</p>
-          <img src="./img/bishop_b.svg" alt="Bishop black" />
-        </div>
+      <div id="F8" class="field light">
+        <p class="over">F</p>
+        <img src="./img/bishop_b.svg" alt="Bishop black" />
       </div>
-      <div class="field dark">
-        <div id="G8">
-          <p class="over">G</p>
-          <img src="./img/knight_b.svg" alt="Knight black" />
-        </div>
+      <div id="G8" class="field dark">
+        <p class="over">G</p>
+        <img src="./img/knight_b.svg" alt="Knight black" />
       </div>
-      <div class="field light">
-        <div id="H8">
-          <p class="over">H</p>
-          <p class="right">8</p>
-          <img src="img/rook_b.svg" alt="Rook black" />
-        </div>
+      <div id="H8" class="field light">
+        <p class="over">H</p>
+        <p class="right">8</p>
+        <img src="img/rook_b.svg" alt="Rook black" />
       </div>
 
-      <div class="field light">
-        <div id="A7">
-          <p class="left">7</p>
-          <img src="./img/pawn_b.svg" alt="Pawn black" />
-        </div>
+      <div id="A7" class="field light">
+        <p class="left">7</p>
+        <img src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
-      <div class="field dark">
-        <div id="B7">
-          <img src="./img/pawn_b.svg" alt="Pawn black" />
-        </div>
+      <div id="B7" class="field dark">
+        <img src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
-      <div class="field light">
-        <div id="C7">
-          <img src="./img/pawn_b.svg" alt="Pawn black" />
-        </div>
+      <div id="C7" class="field light">
+        <img src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
-      <div class="field dark">
-        <div id="D7">
-          <img src="./img/pawn_b.svg" alt="Pawn black" />
-        </div>
+      <div id="D7" class="field dark">
+        <img src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
-      <div class="field light">
-        <div id="E7">
-          <img src="./img/pawn_b.svg" alt="Pawn black" />
-        </div>
+      <div id="E7" class="field light">
+        <img src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
-      <div class="field dark">
-        <div id="F7">
-          <img src="./img/pawn_b.svg" alt="Pawn black" />
-        </div>
+      <div id="F7" class="field dark">
+        <img src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
-      <div class="field light">
-        <div id="G7">
-          <img src="./img/pawn_b.svg" alt="Pawn black" />
-        </div>
+      <div id="G7" class="field light">
+        <img src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
-      <div class="field dark">
-        <div id="H7">
-          <p class="right">7</p>
-          <img src="./img/pawn_b.svg" alt="Pawn black" />
-        </div>
+      <div id="H7" class="field dark">
+        <p class="right">7</p>
+        <img src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
 
-      <div class="field dark">
-        <div id="A6">
-          <p class="left">6</p>
-        </div>
+      <div id="A6" class="field dark">
+        <p class="left">6</p>
       </div>
-      <div class="field light">
-        <div id="B6"></div>
+      <div id="B6" class="field light">
       </div>
-      <div class="field dark">
-        <div id="C6"></div>
+      <div id="C6" class="field dark">
       </div>
-      <div class="field light">
-        <div id="D6"></div>
+      <div id="D6" class="field light">
       </div>
-      <div class="field dark">
-        <div id="E6"></div>
+      <div id="E6" class="field dark">
       </div>
-      <div class="field light">
-        <div id="F6"></div>
+      <div id="F6" class="field light">
       </div>
-      <div class="field dark">
-        <div id="G6"></div>
+      <div id="G6" class="field dark">
       </div>
-      <div class="field light">
-        <div id="H6">
-          <p class="right">6</p>
-        </div>
+      <div id="H6" class="field light">
+        <p class="right">6</p>
       </div>
 
-      <div class="field light">
-        <div id="A5">
-          <p class="left">5</p>
-        </div>
+      <div id="A5" class="field light">
+        <p class="left">5</p>
       </div>
-      <div class="field dark">
-        <div id="B5"></div>
+      <div id="B5" class="field dark">
       </div>
-      <div class="field light">
-        <div id="C5"></div>
+      <div id="C5" class="field light">
       </div>
-      <div class="field dark">
-        <div id="D5"></div>
+      <div id="D5" class="field dark">
       </div>
-      <div class="field light">
-        <div id="E5"></div>
+      <div id="E5" class="field light">
       </div>
-      <div class="field dark">
-        <div id="F5"></div>
+      <div id="F5" class="field dark">
       </div>
-      <div class="field light">
-        <div id="G5"></div>
+      <div id="G5" class="field light">
       </div>
-      <div class="field dark">
-        <div id="H5">
-          <p class="right">5</p>
-        </div>
+      <div id="H5" class="field dark">
+        <p class="right">5</p>
       </div>
 
-      <div class="field dark">
-        <div id="A4">
-          <p class="left">4</p>
-        </div>
+      <div id="A4" class="field dark">
+        <p class="left">4</p>
       </div>
-      <div class="field light">
-        <div id="B4"></div>
+      <div id="B4" class="field light">
       </div>
-      <div class="field dark">
-        <div id="C4"></div>
+      <div id="C4" class="field dark">
       </div>
-      <div class="field light">
-        <div id="D4"></div>
+      <div id="D4" class="field light">
       </div>
-      <div class="field dark">
-        <div id="E4"></div>
+      <div id="E4" class="field dark">
       </div>
-      <div class="field light">
-        <div id="F4"></div>
+      <div id="F4" class="field light">
       </div>
-      <div class="field dark">
-        <div id="G4"></div>
+      <div id="G4" class="field dark">
       </div>
-      <div class="field light">
-        <div id="H4">
-          <p class="right">4</p>
-        </div>
+      <div id="H4" class="field light">
+        <p class="right">4</p>
       </div>
 
-      <div class="field light">
-        <div id="A3">
-          <p class="left">3</p>
-        </div>
+      <div id="A3" class="field light">
+        <p class="left">3</p>
       </div>
-      <div class="field dark">
-        <div id="B3"></div>
+      <div id="B3" class="field dark">
       </div>
-      <div class="field light">
-        <div id="C3"></div>
+      <div id="C3" class="field light">
       </div>
-      <div class="field dark">
-        <div id="D3"></div>
+      <div id="D3" class="field dark">
       </div>
-      <div class="field light">
-        <div id="E3"></div>
+      <div id="E3" class="field light">
       </div>
-      <div class="field dark">
-        <div id="F3"></div>
+      <div id="F3" class="field dark">
       </div>
-      <div class="field light">
-        <div id="G3"></div>
+      <div id="G3" class="field light">
       </div>
-      <div class="field dark">
-        <div id="H3">
-          <p class="right">3</p>
-        </div>
+      <div id="H3" class="field dark">
+        <p class="right">3</p>
       </div>
 
-      <div class="field dark">
-        <div id="A2">
-          <p class="left">2</p>
-          <img src="./img/pawn_w.svg" alt="Pawn white" />
-        </div>
+      <div id="A2" class="field dark">
+        <p class="left">2</p>
+        <img src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
-      <div class="field light">
-        <div id="B2">
-          <img src="./img/pawn_w.svg" alt="Pawn white" />
-        </div>
+      <div id="B2" class="field light">
+        <img src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
-      <div class="field dark">
-        <div id="C2">
-          <img src="./img/pawn_w.svg" alt="Pawn white" />
-        </div>
+      <div id="C2" class="field dark">
+        <img src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
-      <div class="field light">
-        <div id="D2">
-          <img src="./img/pawn_w.svg" alt="Pawn white" />
-        </div>
+      <div id="D2" class="field light">
+        <img src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
-      <div class="field dark">
-        <div id="E2">
-          <img src="./img/pawn_w.svg" alt="Pawn white" />
-        </div>
+      <div id="E2" class="field dark">
+        <img src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
-      <div class="field light">
-        <div id="F2">
-          <img src="./img/pawn_w.svg" alt="Pawn white" />
-        </div>
+      <div id="F2" class="field light">
+        <img src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
-      <div class="field dark">
-        <div id="G2">
-          <img src="./img/pawn_w.svg" alt="Pawn white" />
-        </div>
+      <div id="G2" class="field dark">
+        <img src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
-      <div class="field light">
-        <div id="H2">
-          <p class="right">2</p>
-          <img src="./img/pawn_w.svg" alt="Pawn white" />
-        </div>
+      <div id="H2" class="field light">
+        <p class="right">2</p>
+        <img src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
 
-      <div class="field light">
-        <div id="A1">
-          <p class="under">A</p>
-          <p class="left">1</p>
-          <img src="./img/rook_w.svg" alt="Rook white" />
-        </div>
+      <div id="A1" class="field light">
+        <p class="under">A</p>
+        <p class="left">1</p>
+        <img src="./img/rook_w.svg" alt="Rook white" />
       </div>
-      <div class="field dark">
-        <div id="B1">
-          <p class="under">B</p>
-          <img src="./img/knight_w.svg" alt="Knight white" />
-        </div>
+      <div id="B1" class="field dark">
+        <p class="under">B</p>
+        <img src="./img/knight_w.svg" alt="Knight white" />
       </div>
-      <div class="field light">
-        <div id="C1">
-          <p class="under">C</p>
-          <img src="./img/bishop_w.svg" alt="Bishop white" />
-        </div>
+      <div id="C1" class="field light">
+        <p class="under">C</p>
+        <img src="./img/bishop_w.svg" alt="Bishop white" />
       </div>
-      <div class="field dark">
-        <div id="D1">
-          <p class="under">D</p>
-          <img src="./img/king_w.svg" alt="King white" />
-        </div>
+      <div id="D1" class="field dark">
+        <p class="under">D</p>
+        <img src="./img/king_w.svg" alt="King white" />
       </div>
-      <div class="field light">
-        <div id="E1">
-          <p class="under">E</p>
-          <img src="./img/queen_w.svg" alt="Queen white" />
-        </div>
+      <div id="E1" class="field light">
+        <p class="under">E</p>
+        <img src="./img/queen_w.svg" alt="Queen white" />
       </div>
-      <div class="field dark">
-        <div id="F1">
-          <p class="under">F</p>
-          <img src="./img/bishop_w.svg" alt="Bishop white" />
-        </div>
+      <div id="F1" class="field dark">
+        <p class="under">F</p>
+        <img src="./img/bishop_w.svg" alt="Bishop white" />
       </div>
-      <div class="field light">
-        <div id="G1">
-          <p class="under">G</p>
-          <img src="./img/knight_w.svg" alt="Knight white" />
-        </div>
+      <div id="G1" class="field light">
+        <p class="under">G</p>
+        <img src="./img/knight_w.svg" alt="Knight white" />
       </div>
-      <div class="field dark">
-        <div id="H1">
-          <p class="under">H</p>
-          <p class="right">1</p>
-          <img src="./img/rook_w.svg" alt="Rook white" />
-        </div>
+      <div id="H1" class="field dark">
+        <p class="under">H</p>
+        <p class="right">1</p>
+        <img src="./img/rook_w.svg" alt="Rook white" />
       </div>
     </section>
 
