feature: select moves in #game

--- a/index.html
+++ b/index.html
@@ -42,13 +42,12 @@
         <div class="move-number">3.</div>
         <div class="move-white"><span>Nc3</span></div>
         <div class="move-black"><span>g6</span></div>
-        <div class="move-number sel-row">4.</div>
-        <div class="move-white sel-row">
-          <img id="sel-move" src="./img/sel-move.svg" alt="selected move">
+        <div class="move-number">4.</div>
+        <div class="move-white">
           <img class="comment-small" src="./img/comment_small_left.png" alt="comment">
           <span>Be3</span>
         </div>
-        <div class="move-black sel-row">
+        <div class="move-black">
           <span>Bg7</span>
         </div>
         <div class="move-number">5.</div>
@@ -321,6 +320,7 @@
     </section>
   </div>
 
+  <script src="js/main.js"></script>
 </body>
 
 </html>
