--- a/index.html
+++ b/index.html
@@ -94,10 +94,17 @@
         <p class="over">A</p>
         <p class="left">8</p>
         <img src="./img/rook_b.svg" alt="Rook black" />
+        <svg class="move-option"><circle cx="50%" cy="50%" r="50%"/></svg>
       </div>
       <div id="B8" class="field light">
         <p class="over">B</p>
         <img src="./img/knight_b.svg" alt="Knight black" />
+        <svg class="sel-piece">
+            <rect x="0%" y="0%" />
+            <rect x="0%" y="65%" />
+            <rect x="65%" y="0%" />
+            <rect x="65%" y="65%" />
+        </svg>
       </div>
       <div id="C8" class="field dark">
         <p class="over">C</p>
