--- a/index.html
+++ b/index.html
@@ -93,64 +93,63 @@
       <div id="A8" class="field dark">
         <p class="over">A</p>
         <p class="left">8</p>
-        <img src="./img/rook_b.svg" alt="Rook black" />
-        <svg class="move-option"><circle cx="50%" cy="50%" r="50%"/></svg>
+        <img class='rook black' src="./img/rook_b.svg" alt="Rook black" />
       </div>
       <div id="B8" class="field light">
         <p class="over">B</p>
-        <img src="./img/knight_b.svg" alt="Knight black" />
+        <img class="knight black" src="./img/knight_b.svg" alt="Knight black" />
       </div>
       <div id="C8" class="field dark">
         <p class="over">C</p>
-        <img src="./img/bishop_b.svg" alt="Bishop black" />
+        <img class="bishop black" src="./img/bishop_b.svg" alt="Bishop black" />
       </div>
       <div id="D8" class="field light">
         <p class="over">D</p>
-        <img src="./img/king_b.svg" alt="King black" />
+        <img class="king black" src="./img/king_b.svg" alt="King black" />
       </div>
       <div id="E8" class="field dark">
         <p class="over">E</p>
-        <img src="./img/queen_b.svg" alt="Queen black" />
+        <img class="queen black" src="./img/queen_b.svg" alt="Queen black" />
       </div>
       <div id="F8" class="field light">
         <p class="over">F</p>
-        <img src="./img/bishop_b.svg" alt="Bishop black" />
+        <img class="bishop black" src="./img/bishop_b.svg" alt="Bishop black" />
       </div>
       <div id="G8" class="field dark">
         <p class="over">G</p>
-        <img src="./img/knight_b.svg" alt="Knight black" />
+        <img class="knight black" src="./img/knight_b.svg" alt="Knight black" />
       </div>
       <div id="H8" class="field light">
         <p class="over">H</p>
         <p class="right">8</p>
-        <img src="img/rook_b.svg" alt="Rook black" />
+        <img class="rook black" src="img/rook_b.svg" alt="Rook black" />
       </div>
 
       <div id="A7" class="field light">
         <p class="left">7</p>
-        <img src="./img/pawn_b.svg" alt="Pawn black" />
+        <img class="pawn black" src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
       <div id="B7" class="field dark">
-        <img src="./img/pawn_b.svg" alt="Pawn black" />
+        <img class="pawn black" src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
       <div id="C7" class="field light">
-        <img src="./img/pawn_b.svg" alt="Pawn black" />
+        <img class="pawn black" src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
       <div id="D7" class="field dark">
-        <img src="./img/pawn_b.svg" alt="Pawn black" />
+        <img class="pawn black" src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
       <div id="E7" class="field light">
-        <img src="./img/pawn_b.svg" alt="Pawn black" />
+        <img class="pawn black" src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
       <div id="F7" class="field dark">
-        <img src="./img/pawn_b.svg" alt="Pawn black" />
+        <img class="pawn black" src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
       <div id="G7" class="field light">
-        <img src="./img/pawn_b.svg" alt="Pawn black" />
+        <img class="pawn black" src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
       <div id="H7" class="field dark">
         <p class="right">7</p>
-        <img src="./img/pawn_b.svg" alt="Pawn black" />
+        <img class="pawn black" src="./img/pawn_b.svg" alt="Pawn black" />
       </div>
 
       <div id="A6" class="field dark">
@@ -231,64 +230,64 @@
 
       <div id="A2" class="field dark">
         <p class="left">2</p>
-        <img src="./img/pawn_w.svg" alt="Pawn white" />
+        <img class="pawn white" src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
       <div id="B2" class="field light">
-        <img src="./img/pawn_w.svg" alt="Pawn white" />
+        <img class="pawn white" src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
       <div id="C2" class="field dark">
-        <img src="./img/pawn_w.svg" alt="Pawn white" />
+        <img class="pawn white" src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
       <div id="D2" class="field light">
-        <img src="./img/pawn_w.svg" alt="Pawn white" />
+        <img class="pawn white" src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
       <div id="E2" class="field dark">
-        <img src="./img/pawn_w.svg" alt="Pawn white" />
+        <img class="pawn white" src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
       <div id="F2" class="field light">
-        <img src="./img/pawn_w.svg" alt="Pawn white" />
+        <img class="pawn white" src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
       <div id="G2" class="field dark">
-        <img src="./img/pawn_w.svg" alt="Pawn white" />
+        <img class="pawn white" src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
       <div id="H2" class="field light">
         <p class="right">2</p>
-        <img src="./img/pawn_w.svg" alt="Pawn white" />
+        <img class="pawn white" src="./img/pawn_w.svg" alt="Pawn white" />
       </div>
 
       <div id="A1" class="field light">
         <p class="under">A</p>
         <p class="left">1</p>
-        <img src="./img/rook_w.svg" alt="Rook white" />
+        <img class="rook white" src="./img/rook_w.svg" alt="Rook white" />
       </div>
       <div id="B1" class="field dark">
         <p class="under">B</p>
-        <img src="./img/knight_w.svg" alt="Knight white" />
+        <img class="knight white" src="./img/knight_w.svg" alt="Knight white" />
       </div>
       <div id="C1" class="field light">
         <p class="under">C</p>
-        <img src="./img/bishop_w.svg" alt="Bishop white" />
+        <img class="bishop white" src="./img/bishop_w.svg" alt="Bishop white" />
       </div>
       <div id="D1" class="field dark">
         <p class="under">D</p>
-        <img src="./img/king_w.svg" alt="King white" />
+        <img class="king white" src="./img/king_w.svg" alt="King white" />
       </div>
       <div id="E1" class="field light">
         <p class="under">E</p>
-        <img src="./img/queen_w.svg" alt="Queen white" />
+        <img class="queen white" src="./img/queen_w.svg" alt="Queen white" />
       </div>
       <div id="F1" class="field dark">
         <p class="under">F</p>
-        <img src="./img/bishop_w.svg" alt="Bishop white" />
+        <img class="bishop white" src="./img/bishop_w.svg" alt="Bishop white" />
       </div>
       <div id="G1" class="field light">
         <p class="under">G</p>
-        <img src="./img/knight_w.svg" alt="Knight white" />
+        <img class="knight white" src="./img/knight_w.svg" alt="Knight white" />
       </div>
       <div id="H1" class="field dark">
         <p class="under">H</p>
         <p class="right">1</p>
-        <img src="./img/rook_w.svg" alt="Rook white" />
+        <img class="rook white" src="./img/rook_w.svg" alt="Rook white" />
       </div>
     </section>
 
@@ -321,7 +320,7 @@
     </section>
   </div>
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
